--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>webpack-es6-starter</title>
+    <title>regex</title>
     <script src="dist/bundle.js" async></script>
     <script src="http://localhost:35729/livereload.js" async></script>
 </head>
